--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <!-- Герой -->            
             <section class="hero">
 
-                <div class="container">
-                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <div class="hero-container">
+                    <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
                     <button class="hero-button" type="button">Заказать услугу</button>
                 </div>
 
@@ -134,7 +134,7 @@
     
         <!-- Футер -->           
             <footer class="footer-section">
-                <div class="container">         
+                <div class="footer-container">         
                     <a href="./index.html" class="logo-footer">Web<span class="footer-section-logo">Studio</span>
                         <!-- <img src="./images/WebStudio.svg" alt="Логотип компании"> -->
                     </a>        
