--- a/portfolio.html
+++ b/portfolio.html
@@ -150,20 +150,19 @@
 
          <!-- Футер -->
         <footer class="footer-section">
-            <div class="container">
-                <a href="./index.html" class="logo-footer"> Web<span class="footer-section-logo">Studio</span>
+            <div class="footer-container">
+                <a href="./index.html" class="logo-footer">Web<span class="footer-section-logo">Studio</span>
                     <!-- <img src="./images/WebStudio.svg" alt="Логотип компании"> -->
                 </a>
-        
+
                 <address class="address">
-                    <span class="address-location">г. Киев, пр-т Леси Украинки, 26</span>
-                    <ul class="">
-                        <li><a href="mailto:info@example.com" class="footer-section-contact">info@example.com</a></li>
-                        <li><a href="tel:+380991111111" class="footer-section-contact">+38 099 111 11 11</a></li>
-                    </ul>
+                    <p class="address-location">г. Киев, пр-т Леси Украинки, 26</p>
+                    <a href="mailto:info@example.com" class="footer-section-contact">info@example.com</a>
+                    <a href="tel:+380991111111" class="footer-section-contact">+38 099 111 11 11</a>
                 </address>
+
             </div>
-        </footer>        
+        </footer>
     </body>
 </html>
 
