--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     
     <body>
         <!-- Шапка сайта -->
-        <header>
-            <div class="container">
-
-            <nav class="container-nav">
+    <header class="header-border">
+        <div class="container header-section">
+            <nav class="nav">
                 <a href="./index.html" class="logo"> Web<span class="nav-logo">Studio</span></a>
 
                 <!-- Навигация -->                   
@@ -29,7 +28,7 @@
                 </ul>
             </nav>      
 
-        <!-- Контакты в меню-->
+                 <!-- Контакты в меню-->
                 <ul class="contacts">
                     <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                     <li class="item"><a href="tel:+380991111111" class="link">+38 096 111 11 11</a> </li>
@@ -43,7 +42,7 @@
             <!-- Герой -->            
             <section class="hero">
 
-                <div class="hero-container">
+                <div class="container">
                     <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
                     <button class="hero-button" type="button">Заказать услугу</button>
                 </div>
@@ -83,13 +82,13 @@
             </section>
 
             <!-- Примеры работ -->           
-            <section class="section">
+            <section class="section-exapmles">
                 <div class="container">
                     <h2 class="section-title">Чем мы занимаемся</h2>
                     <ul>
-                        <li class="section-img"><img src="./images/img.jpg" alt="программист кодит" width="370" height="294"></li>
-                        <li class="section-img"><img src="./images/box2.jpg" alt="телефон и ноутбук" width="370" height="294"></li>
-                        <li class="section-img"><img src="./images/box3.jpg" alt="графический дизайн" width="370" height="294"></li>
+                        <li class="section-img section-li"><img src="./images/img.jpg" alt="программист кодит" width="370" height="294"></li>
+                        <li class="section-img section-li"><img src="./images/box2.jpg" alt="телефон и ноутбук" width="370" height="294"></li>
+                        <li class="section-img section-li"><img src="./images/box3.jpg" alt="графический дизайн" width="370" height="294"></li>
                     </ul>
                 </div>
             </section>                        
